Name:           deepseq-tests
Version:        0.1
License:        BSD3
License-File:   LICENSE
Synopsis:       deepseq tests
Cabal-Version:  >= 1.10
Build-Type:     Simple
Description:    @deepseq@ tests

test-suite test
  Default-Language: Haskell2010
  hs-source-dirs: .
  main-is: Main.hs
  type: exitcode-stdio-1.0
  build-depends:
    array,
    base,
    deepseq,
    ghc-prim
  ghc-options: -Wall
  other-extensions:
    CPP
    BangPatterns
    DefaultSignatures
    DeriveDataTypeable
    DeriveGeneric
    FlexibleContexts
    Safe
    TupleSections
    TypeOperators

source-repository head
  type:     git
  location: https://github.com/haskell/deepseq
  subdir:   deepseq-tests
