name:           deepseq-tests
version:        0.1
license:        BSD3
license-file:   LICENSE
maintainer:     libraries@haskell.org
bug-reports:    https://github.com/haskell/deepseq/issues
synopsis:       deepseq tests
category:       Control
description:    @deepseq@ tests
build-type:     Simple
cabal-version:  >=1.10
tested-with:    GHC==8.4.1,
                GHC==8.2.2, GHC==8.2.1,
                GHC==8.0.2, GHC==8.0.1,
                GHC==7.10.3, GHC==7.10.2, GHC==7.10.1,
                GHC==7.8.4, GHC==7.8.3, GHC==7.8.2, GHC==7.8.1,
                GHC==7.6.3, GHC==7.6.2, GHC==7.6.1,
                GHC==7.4.2, GHC==7.4.1

source-repository head
  type:     git
  location: https://github.com/haskell/deepseq.git

test-suite deepseq-generics-tests
    default-language:    Haskell2010
    type:                exitcode-stdio-1.0
    hs-source-dirs:      .
    main-is:             Main.hs
    other-extensions:
        CPP
        DeriveDataTypeable
        DeriveGeneric
        TupleSections

    ghc-options:         -Wall

    build-depends:
        base >= 4.5 && < 4.12,
        deepseq,
        test-framework == 0.8.*,
        test-framework-hunit == 0.3.*,
        HUnit >= 1.2 && < 1.7
